# rust-tcp-message

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
lib/: Cargo.toml
lib/src/: codec.rs  lib.rs  message.rs
server/: Cargo.toml
server/src/: commands.rs  main.rs
