[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tokio-util = { version = "0.7.7", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
