[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
futures = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.70"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
log = "0.4.17"
env_logger = "0.10.0"